# doc

./: .dockerignore  .gitignore  Dockerfile.vitepress  Makefile  README.md  docker-compose.yml  index.md  package.json  pnpm-lock.yaml
.github/workflows/: dependency.yml  deploy.yml
.vitepress/: config.mts
apps/client/: Dockerfile  package.json  pnpm-lock.yaml
apps/server/: Dockerfile  pyproject.toml
apps/server/app/: main.py
apps/server/app/routers/: ollama.py  translate.py
apps/server/app/services/: markdown.py  ollama.py
apps/server/app/shared/: config.py  logger.py
apps/server/src/: main.py
apps/server/src/api/: router.py
apps/server/src/api/endpoints/: ollama.py  translations.py
apps/server/src/core/: logger.py
apps/server/src/middlewares/: logging.py
apps/server/src/routers/: ollama.py
apps/server/src/services/: ai.py
apps/server/src/shared/: api.py  logger.py
apps/server/src/shared/middlewares/: cors.py  logging.py
apps/server/src/shared/services/: ai.py
docs/en/: admin-traductions.md  docker.md  git.md  hosting.md  index.md  ollama.md
docs/fr/: api-examples.md  docker.md  git.md  github.md  hosting.md  index.md  markdown-examples.md  nuxt.md  ollama.md
en/: git.md
fr/: git.md  index.md
fr-copy/: index.md  nuxt.md
scripts/: logger.cjs  translate.cjs
scripts/translate/: apiClient.js  fileProcessor.js  index.js  languageSettings.js  logger.js  translate.cjs  translator.js
scripts/translate-py/: Dockerfile  api_client.py  main.py  requirements.txt
scripts/translate_py/: api_client.py  main.py  requirements.txt  (+1 more)
(+21 files in other folders)
